--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ html, body { font-size: 14px; height: 100%; }
 .row { max-width: 1000px; width: 100%; margin: 0 auto; }
 a:hover { text-decoration: none; }
 .clear { display: block; clear: both; }
+
 #wrap {
     min-height: 100%;
     margin: 0 auto;
@@ -93,6 +94,9 @@ a:hover { text-decoration: none; }
 .temp .up { margin-left: 5%; }
 .temp .down { margin-right: 5%; }
 
+.temp .up:hover, .temp .down:hover { pointer: pointer; }
+.temp .up:active, .temp .down:active  { border: 5px solid transparent; }
+
 .temp img { width: 90%; }
 
 .rooms { margin-top: 25px; padding: 15px 20px; border-radius: 15px; }
@@ -158,8 +162,8 @@ a:hover { text-decoration: none; }
     display: block;
     text-align: center;
     position: relative;
-    background-color: rgba(42,54,59, 0.7);
-    margin: 5% 5% 0;
+    background-color: rgba(42,54,59, 0.8);
+    margin: 0;
     color: #fff;
     padding: 10px 0;
 }
@@ -167,7 +171,7 @@ a:hover { text-decoration: none; }
 h1 {
     display: block;
     background-color: #e4df8e;
-    /*background-color: rgba(255,255,255,0.9);*/
+    /*background-color: rgba(0,0,0,0.7);*/
     color: #000;
     font-weight: 400;
     padding: 10px 0 7px;
@@ -218,10 +222,12 @@ h1 {
 #schedule table#rows thead td {
     background-color: #fff;
     color: #000;
+    font-weight: bold;
 }
 
 #schedule table#rows td {
     padding: 5px;
+    color: #fff;
 }
 
 .flip {
