--- a/style.css
+++ b/style.css
@@ -99,8 +99,55 @@ a:hover { text-decoration: none; }
 
 .temp img { width: 90%; }
 
+
+#temp {
+            display: block;
+            text-align: center;
+            position: relative;
+            background-color: rgba(42,54,59, 0.7);
+            margin: 5% 5% 25px;
+            /*padding: 0 0 25px;*/
+        }
+
+        #temp .degree {
+            width: 48%;
+            display: inline-block;
+            text-align: center;
+            font-size: 5em;
+            color: #fff;
+            font-family: 'Montserrat', arial, sans-serif;
+        }
+
+        #temp .degree span {
+            font-size: 6rem;
+            vertical-align: top;
+            position: absolute;
+            color: rgba(255,255,255,0.5);
+            display: none;
+        }
+
+        #temp_controls {
+            display: inline-block;
+            width: 50%;
+            position: relative;
+            top: 0px;
+        }
+
+        #temp .up, #temp .down {
+            display: inline-block;
+            width: 35%;
+        }
+
+        #temp .down { margin-right: 12%; }
+        #temp .up { margin-right: 10%; }
+
+        #temp img {
+            width: 100%;
+}
+
+
 .rooms { margin-top: 25px; padding: 15px 20px; border-radius: 15px; }
-.rooms table { margin: 0; color: #fff; }
+.rooms table, #schedule table { margin: 0; color: #fff; }
 
 .fans, .setting {
     width: 45%;
@@ -162,7 +209,7 @@ a:hover { text-decoration: none; }
     display: block;
     text-align: center;
     position: relative;
-    background-color: rgba(42,54,59, 0.8);
+    /*background-color: rgba(42,54,59, 0.8);*/
     margin: 0;
     color: #fff;
     padding: 10px 0;
@@ -220,16 +267,19 @@ h1 {
 }
 
 #schedule table#rows thead td {
-    background-color: #fff;
+    background-color: #bbb;
     color: #000;
     font-weight: bold;
+    /*border-bottom: 2px solid #fff;*/
 }
+
+#schedule table#rows thead tr.heading td { background-color: #fff; padding: 5px 0; font-size: 1.2em; }
 
 #schedule table#rows td {
-    padding: 5px;
+    padding: 0px;
     color: #fff;
 }
-
+#schedule table#rows tr:nth-child(even) { background-color: rgba(255,255,255,0.05); }
 .flip {
     -moz-transform: scaleY(-1);
     -webkit-transform: scaleY(-1);
@@ -264,6 +314,8 @@ h1 {
     /*.rooms { width: 48%; }*/
     .rooms table { color: #333; font-size: 1.2em; }
     .rooms table td, .rooms table th { padding: 12px !important; }
+    #schedule table tr td { padding 5px !important; }
     .fans { clear: left; margin-right: 2%; margin-left: 3.5%; }
     .fans, .setting { width: 14%; background-color: rgba(0,0,0,0.5); }
+    #schedule { background-color: rgba(42,54,59, 0.8); }
 }
