--- a/style.css
+++ b/style.css
@@ -100,49 +100,49 @@ a:hover { text-decoration: none; }
 .temp img { width: 90%; }
 
 
-#temp {
-            display: block;
-            text-align: center;
-            position: relative;
-            background-color: rgba(42,54,59, 0.7);
-            margin: 5% 5% 25px;
-            /*padding: 0 0 25px;*/
-        }
+.temp2 {
+    display: block;
+    text-align: center;
+    position: relative;
+    background-color: rgba(42,54,59, 0.7);
+    margin: 5% 5% 25px;
+    /*padding: 0 0 25px;*/
+}
 
-        #temp .degree {
-            width: 48%;
-            display: inline-block;
-            text-align: center;
-            font-size: 5em;
-            color: #fff;
-            font-family: 'Montserrat', arial, sans-serif;
-        }
+.temp2 .degree {
+    width: 48%;
+    display: inline-block;
+    text-align: center;
+    font-size: 5em;
+    color: #fff;
+    font-family: 'Montserrat', arial, sans-serif;
+}
 
-        #temp .degree span {
-            font-size: 6rem;
-            vertical-align: top;
-            position: absolute;
-            color: rgba(255,255,255,0.5);
-            display: none;
-        }
+.temp2 .degree span {
+    font-size: 6rem;
+    vertical-align: top;
+    position: absolute;
+    color: rgba(255,255,255,0.5);
+    display: none;
+}
 
-        #temp_controls {
-            display: inline-block;
-            width: 50%;
-            position: relative;
-            top: 0px;
-        }
+.temp2_controls {
+    display: inline-block;
+    width: 50%;
+    position: relative;
+    top: 0px;
+}
 
-        #temp .up, #temp .down {
-            display: inline-block;
-            width: 35%;
-        }
+.temp2 .up, .temp2 .down {
+    display: inline-block;
+    width: 35%;
+}
 
-        #temp .down { margin-right: 12%; }
-        #temp .up { margin-right: 10%; }
+.temp2 .down { margin-right: 12%; }
+.temp2 .up { margin-right: 10%; }
 
-        #temp img {
-            width: 100%;
+.temp2 img {
+    width: 100%;
 }
 
 
