removed schedules bg

--- a/style.css
+++ b/style.css
@@ -304,7 +304,7 @@ h1 {
         top: 10px;
 
     }
-    #schedule { background-color: rgba(42,54,59, 0.05); }
+    /*#schedule { background-color: rgba(42,54,59, 0.05); }*/
     .temp { background-image: url('http://www.hdwallpapersinn.com/wp-content/uploads/2014/08/wonderful-wallpapers-91.jpg'); }
 
 }
