--- a/style.css
+++ b/style.css
@@ -182,13 +182,15 @@ a:hover { text-decoration: none; }
 }
 
 h1 {
-    display: block;
-    background-color: #e4df8e;
+    /*display: block;*/
+    /*background-color: #e4df8e;*/
     /*background-color: rgba(0,0,0,0.7);*/
     color: #000;
     font-weight: 400;
-    padding: 10px 0 7px;
+    padding: 25px 0;
     font-size: 1.7rem;
+    font-family: 'Montserrat', 'Roboto', arial, sans-serif;
+    margin: 0;
 }
 
 #schedule table {
@@ -259,7 +261,46 @@ h1 {
     filter: flipv;
 }
 
-.fix { display: none; }
+#login {
+    width: 85%;
+    margin: 30px auto 0;
+}
+
+#login h1 {
+    text-align: center;
+    color: #fff;
+    font-family: 'Montserrat', arial, sans-serif;
+    font-weight: 300;
+    font-size: 3.5em;
+    margin-bottom: 50px;
+    text-shadow: 2px 2px 10px rgba(0,0,0,0.4);
+}
+
+#login input {
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 15px;
+    font-size: 1.4em;
+    margin-bottom: 50px;
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.4);
+}
+
+#login input[type="text"], #login input[type="password"], button {
+    border-radius: 10px;
+    border: none;
+}
+
+#login button {
+    display: block;
+    width: 60%;
+    padding: 15px;
+    font-size: 1.4em;
+    margin: 0 auto;
+    background-color: #2A363B;
+    color: #fff;
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.4);
+}
 
 @media (min-width: 600px) {
     .rooms { float: right; width: 60%; margin-left: 3%; margin-right: 0; padding-right: 5%; }
@@ -286,7 +327,7 @@ h1 {
     /*.rooms { position: absolute; top: 0; right: -10px; width: 65%; }*/
     .rooms table { color: #333; font-size: 1.2em; }
     .rooms table td, .rooms table th { padding: 12px !important; }
-    #schedule table tr td { padding 5px !important; }
+    #schedule table tr td { padding: 5px !important; }
     .fans { clear: left; margin-right: 5%; margin-left: 10%; }
     .fans, .setting { width: 40%; background-color: rgba(0,0,0,0.2); margin-top: 10px; }
     .fans a, .setting a { font-size: 1.2em; }
@@ -303,7 +344,7 @@ h1 {
         position: relative;
         z-index: 10;
         font-family: 'Montserrat', arial, sans-serif;
-        top: 10px;
+        top: 20px;
 
     }
     /*#schedule { background-color: rgba(42,54,59, 0.05); }*/
