--- a/style.css
+++ b/style.css
@@ -281,25 +281,25 @@ h1 {
     width: 100%;
     box-sizing: border-box;
     padding: 15px;
-    font-size: 1.4em;
-    margin-bottom: 50px;
-    box-shadow: 2px 2px 10px rgba(0,0,0,0.4);
+    font-size: 1.1em;
+    margin-bottom: 20px;
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.2);
 }
 
 #login input[type="text"], #login input[type="password"], button {
     border-radius: 10px;
-    border: none;
+    border: 1px solid #ddd;
 }
 
 #login button {
     display: block;
     width: 60%;
     padding: 15px;
-    font-size: 1.4em;
+    font-size: 1.2em;
     margin: 0 auto;
     background-color: #2A363B;
     color: #fff;
-    box-shadow: 2px 2px 10px rgba(0,0,0,0.4);
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.2);
 }
 
 @media (min-width: 600px) {
