--- a/style.css
+++ b/style.css
@@ -52,8 +52,9 @@ a:hover { text-decoration: none; }
 
 /*.tab:first-child { margin-right: 10%; margin-left: 15%; }*/
 
-.tab.highlight { background-color: rgba(255,255,255, 1); }
-.tab.highlight a { color: rgba(42,54,59, 0.9); }
+/*.tab.highlight { background-color: rgba(255,255,255, 1); }*/
+/*.tab.highlight a { color: rgba(42,54,59, 0.9); }*/
+.tab.highlight a { /*text-decoration: underline;*/ border-bottom: 1px solid #999; }
 /*.tab.highlight:after {
     content: ' ';
     height: 0;
@@ -122,7 +123,6 @@ a:hover { text-decoration: none; }
     border-radius: 15px;
     position: relative;
 }
-/*.fans { margin-right: 5%; }*/
 
 .fans a, .setting a {
     color: #222;
