--- a/style.css
+++ b/style.css
@@ -263,12 +263,12 @@ h1 {
     box-shadow: 2px 2px 10px rgba(0,0,0,0.2);
 }
 
-#login input[type="text"], #login input[type="password"], button {
+#login input[type="text"], #login input[type="password"], #login input[type="button"] {
     border-radius: 10px;
     border: 1px solid #ddd;
 }
 
-#login button {
+#login input[type="button"] {
     display: block;
     width: 60%;
     padding: 15px;
